--- a/config/config.json
+++ b/config/config.json
@@ -19,6 +19,7 @@
     "password": "BgHrokhfascPyCSck6CR",
     "database": "railway",
     "host": "containers-us-west-45.railway.app",
+    "DB_URI": "postgresql://postgres:BgHrokhfascPyCSck6CR@containers-us-west-45.railway.app:6051/railway",
     "dialect": "postgres"
   }
 }
