--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrate": "npx sequelize-cli db:migrate",
+    "migrate": "npx sequelize db:migrate",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
